--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body{
 }
 img {
     height:300px;
-    width: auto;
 }
 .padding_default {
     padding: 50px 100px 50px 100px;
@@ -103,7 +102,8 @@ hr{
         padding: 30px 10px;
     }
     img{
-        height: 150px;
+        height: auto;
+        width:100%;
     }
     .intro h1{
         text-align: center;
